[gd_scene load_steps=2 format=3 uid="uid://btie8cfvuixix"]

[ext_resource type="Script" uid="uid://dyhf1r737532w" path="res://src/scripts/containers/login/Login.gd" id="1_r7dls"]

[node name="Login" type="Node2D"]
script = ExtResource("1_r7dls")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 90.0
offset_right = 287.0
offset_bottom = 353.0

[node name="username_input" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 33.0
offset_top = 69.0
offset_right = 258.0
offset_bottom = 105.0
placeholder_text = "username"

[node name="password_input" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 33.0
offset_top = 118.0
offset_right = 258.0
offset_bottom = 154.0
placeholder_text = "password"
secret = true

[node name="sign_in_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 136.0
offset_top = 177.0
offset_right = 256.0
offset_bottom = 215.0
text = "sign in"

[node name="sign_up_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 138.0
offset_top = 222.0
offset_right = 258.0
offset_bottom = 260.0
text = "sign up"

[connection signal="text_changed" from="Control/username_input" to="." method="_on_username_input_text_changed"]
[connection signal="text_changed" from="Control/password_input" to="." method="_on_password_input_text_changed"]
[connection signal="pressed" from="Control/sign_in_button" to="." method="_on_sign_in_button_pressed"]
[connection signal="pressed" from="Control/sign_up_button" to="." method="_on_sign_up_button_pressed"]
